@@ -66,7 +66,7 @@ done
 cgen="cgen:arc_4_4-cgen-1_0-dev"
 binutils="binutils:arc_4_8-binutils-mainline-dev"
 gcc="gcc:arc_4_8-gcc-mainline-dev"
-gdb="gdb:arc_4_4-gdb-6_8-dev"
+gdb="gdb:arc_4_8-gdb-mainline-dev"
 newlib="newlib:arc_4_4-newlib-1_17-dev"
 uclibc="uClibc:arc_4_4-uClibc-0_9_30-dev"
 linux="linux:stable-arc-3.2"
