@@ -1,3 +1,11 @@
+2012-12-13  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* arc-versions.sh: Add GDB mainline.
+	* build-all.sh: Unified source includes GDB, put log in logs
+	directory.
+	* build-elf.sh, build-uclib.sh: Use single unified source
+	directory (nothing separate for GDB), put log in logs directory.
+
 2012-12-12  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* build-cleanup.sh: New script.
